Upadte on global styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    @apply bg-gray-600 text-zinc-100;
-    -webkit-font-smoothinf: antialiased;
+body {
+  @apply bg-gray-600 text-zinc-100;
+  -webkit-font-smoothinf: antialiased;
+}
+
+::-moz-selection {
+  /* Code for Firefox */
+  color: #292828;
+  background: #ffffff;
+}
+
+::selection {
+  color: #292828;
+  background: #ffffff;
 }
