--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,3 +17,23 @@ body {
   color: #292828;
   background: #ffffff;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #888;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f1f1f1;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #111010;
+}
