--- a/src/screens/Animes/styles.css
+++ b/src/screens/Animes/styles.css
@@ -2,3 +2,17 @@
     margin-right: 7vh;
     margin-left: 7vh;
 }
+
+.btnContent{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 1000px){
+    .btnContent{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
