--- a/src/screens/Video/styles.css
+++ b/src/screens/Video/styles.css
@@ -1,6 +1,6 @@
 .btnhref{
-    @apply rounded bg-white text-orange-400 border-2 border-orange-400 w-[30%] p-5 text-center font-bold text-xl md:text-2xl my-3;
-    @apply hover:bg-orange-600 hover:text-white hover:border-white;
+    @apply rounded bg-orange-600 text-white border-2 border-white w-[30%] p-5 text-center font-bold text-xl md:text-2xl my-3;
+    @apply hover:bg-white hover:text-orange-600 hover:border-orange-400;
 }
 .btnContainer{
     @apply w-[50%] flex flex-row justify-between items-center;
