--- a/src/screens/Animes/styles.css
+++ b/src/screens/Animes/styles.css
@@ -1,18 +1,27 @@
-.cardAnime{
-    margin-right: 7vh;
-    margin-left: 7vh;
+.cardAnime {
+  @apply text-center flex flex-col items-center h-full p-4 m-5 bg-[transparent] border rounded;
 }
 
-.btnContent{
+.btnContent {
+  @apply flex flex-row w-[80%] text-xl md:text-sm my-1 items-center justify-center;
+}
+
+.btnWatch {
+  @apply text-center bg-orange-400 text-xl md:text-xs m-2 w-[75%] md:w-auto md:m-2 hover:bg-orange-600 hover:transition-colors text-white p-2 rounded font-bold;
+}
+
+.imageCard {
+  @apply mb-5 rounded-lg;
+}
+
+.cardsContainer {
+  @apply md:mb-14 items-center justify-between flex md:flex-row flex-col;
+}
+
+@media screen and (max-width: 1000px) {
+  .btnContent {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-@media screen and (max-width: 1000px){
-    .btnContent{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+    flex-direction: column;
+    justify-content: center;
+  }
 }
