--- a/Client/src/components/SectionLinks/styles.css
+++ b/Client/src/components/SectionLinks/styles.css
@@ -1,7 +1,7 @@
 .linkToEpisode{
-    @apply border-2 rounded bg-orange-400 text-white font-bold p-5 text-xl;
+    @apply rounded bg-orange-400 text-white font-bold p-5 text-xl;
     @apply flex flex-col m-2 w-[20vh];
-    @apply hover:bg-orange-600 hover:text-gray-400;
+    @apply hover:bg-orange-600;
 }
 
 .episodeButtons{
