--- a/Client/src/components/DragonBallSuper/styles.css
+++ b/Client/src/components/DragonBallSuper/styles.css
@@ -2,6 +2,10 @@
     @apply flex flex-row my-5;
 }
 
+.containerEps{
+    @apply flex flex-col border-b mt-8 rounded p-5;
+}
+
 @media screen and (max-width: 1150px){
     .episodeButtons{
         @apply flex flex-col my-5;
