--- a/Client/src/components/SideBar/styles.css
+++ b/Client/src/components/SideBar/styles.css
@@ -1,10 +1,22 @@
 .cardNew{
-    @apply flex w-[90%] items-center justify-between border rounded p-3 bg-orange-400;
-    @apply hover:bg-orange-600;
+    @apply flex w-[90%] items-center justify-between p-3 border-b;
+    @apply hover:underline;
 }
 
 .imgCardNew{
     @apply rounded-full;
+}
+
+.sidebar{
+    @apply w-[15%] h-[75vh] bg-zinc-900 p-6 border-l border-gray-600 my-[15vh] rounded;
+}
+
+.nameNews{
+    @apply font-bold text-center text-2xl pb-6 mb-6 border-b border-gray-500 block;
+}
+
+.newsTittle{
+    @apply font-bold text-white;
 }
 
 @media screen and (max-width: 1705px){
