--- a/Client/src/components/SectionLinks/styles.css
+++ b/Client/src/components/SectionLinks/styles.css
@@ -1,5 +1,5 @@
 .linkToEpisode{
-    @apply rounded bg-orange-400 text-white font-bold p-5 text-xl;
+    @apply rounded text-center bg-orange-400 text-white font-bold p-5 text-xl;
     @apply flex flex-col m-2 w-[20vh];
     @apply hover:bg-orange-600;
 }
