Update on sidebar

--- a/Client/src/components/SideBar/styles.css
+++ b/Client/src/components/SideBar/styles.css
@@ -8,7 +8,7 @@
 }
 
 .sidebar{
-    @apply w-[15%] h-[75vh] bg-zinc-900 p-6 border-l border-gray-600 my-[15vh] rounded;
+    @apply w-[15%] h-max bg-zinc-900 p-6 border-l border-gray-600 my-[5vh] rounded;
 }
 
 .nameNews{
