Update on caroussels

--- a/Client/src/components/DragonBallCarousel/styles.css
+++ b/Client/src/components/DragonBallCarousel/styles.css
@@ -6,6 +6,14 @@
     display: block;
 }
 
+.carousselContainer{
+    @apply container flex flex-col items-center mt-9 w-screen;
+}
+
+.headerCaroussel{
+    @apply container bg-gray-700 flex p-2 flex-row justify-between items-center w-screen border-gray-700 rounded-t-lg;
+}
+
 .dbEps{
     display: none;
 }
