--- a/Client/src/components/DragonBallZ/MovieContentZ/styles.css
+++ b/Client/src/components/DragonBallZ/MovieContentZ/styles.css
@@ -5,3 +5,20 @@
 .conteinerZmovies{
     @apply container bg-gray-700 flex p-2 flex-row justify-between items-center w-screen border-gray-700 rounded-t-lg;   
 }
+
+.coverImage{
+    @apply rounded;
+}
+
+.coverImage:hover{
+    transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -o-transform: scale(0.9);
+    transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+}
