:lipstick: feat: Update on card style for special screen ovas and movie rows carousels

--- a/Client/src/components/DragonBallZ/MovieContentZ/styles.css
+++ b/Client/src/components/DragonBallZ/MovieContentZ/styles.css
@@ -10,6 +10,10 @@
     @apply rounded;
 }
 
+.imageCarousel{
+    @apply hover:underline;
+}
+
 .coverImage:hover{
     transform: scale(0.9);
     -webkit-transform: scale(0.9);
