--- a/Client/src/screens/Animes/styles.css
+++ b/Client/src/screens/Animes/styles.css
@@ -1,6 +1,20 @@
 .cardAnime {
   @apply text-center flex flex-col items-center h-full p-2 m-5 rounded;
-  background-image: linear-gradient(#f1d329, #ec782a)
+  background-image: linear-gradient(#f1d329, #d65b08);
+}
+
+.cardAnime:hover{
+  background-image: linear-gradient(90deg, #f1d329, #d65b08);
+  transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  -moz-transform: scale(0.95);
+  -ms-transform: scale(0.95);
+  -o-transform: scale(0.95);
+  transition: 1s ease;
+  -webkit-transition: 1s ease;
+  -moz-transition: 1s ease;
+  -ms-transition: 1s ease;
+  -o-transition: 1s ease;
 }
 
 .textCard{
