--- a/Client/src/components/VideoContent/styles.css
+++ b/Client/src/components/VideoContent/styles.css
@@ -3,5 +3,5 @@
 }
 
 .videoContent{
-    @apply h-[250px] md:h-[600px] w-[100%] md:w-[70%] rounded-3xl bg-gray-700;
+    @apply h-[250px] md:h-[600px] w-[100%] md:w-[70%] rounded-xl bg-gray-700;
 }
