--- a/Client/src/components/VideoContent/styles.css
+++ b/Client/src/components/VideoContent/styles.css
@@ -1,7 +1,20 @@
-.epName{
-    @apply text-2xl md:text-3xl mb-8 text-center font-bold;
+.epName {
+  @apply text-2xl md:text-3xl mb-8 text-center font-bold;
 }
 
-.videoContent{
-    @apply h-[250px] md:h-[600px] w-[100%] md:w-[70%] rounded-xl bg-gray-700;
+.videoContent {
+  @apply h-[250px] md:h-[600px] w-[100%] md:w-[70%] rounded-xl bg-gray-700;
+}
+
+.helpText {
+    @apply text-xl md:text-2xl text-center font-bold;
+  }
+
+.btnHelp {
+  @apply rounded text-center bg-orange-400 text-white font-bold p-3 text-xs;
+  @apply hover:bg-orange-600;
+}
+
+.containerHelp {
+  @apply flex flex-col items-end w-[70%] m-5;
 }
