:lipstick: feat: Update on Home content styles

--- a/Client/src/components/Home/styles.css
+++ b/Client/src/components/Home/styles.css
@@ -1,6 +1,6 @@
 
 .homeContent{
-    width: max-content;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
