--- a/Client/src/styles/global.css
+++ b/Client/src/styles/global.css
@@ -5,7 +5,7 @@
 body {
   @apply bg-gray-600 text-zinc-100;
   -webkit-font-smoothinf: antialiased;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 ::-moz-selection {
