:recycle: refactor: Refactor on Dragon Ball z Links

--- a/Client/src/components/DragonBallZ/styles.css
+++ b/Client/src/components/DragonBallZ/styles.css
@@ -1,5 +1,5 @@
 .episodeButtons{
-    @apply flex flex-row my-5;
+    @apply flex flex-row my-5 container justify-center items-center;
 }
 
 /*1150*/
