--- a/Client/src/screens/Animes/styles.css
+++ b/Client/src/screens/Animes/styles.css
@@ -38,7 +38,7 @@
 }
 
 .cardsContainer {
-  @apply md:mb-14 items-center justify-between flex md:flex-row flex-col;
+  @apply md:mb-14 items-center justify-center flex flex-wrap;
 }
 
 @media screen and (max-width: 1000px) {
