:sparkles: feat: Movie Z Content Styles Update

--- a/Client/src/components/DragonBallZ/MovieContentZ/styles.css
+++ b/Client/src/components/DragonBallZ/MovieContentZ/styles.css
@@ -1,9 +1,9 @@
 .containerCarousel{
-    @apply container flex flex-col items-center mt-9 w-screen;
+    @apply container flex flex-col items-center mt-9;
 }
 
 .conteinerZmovies{
-    @apply container bg-gray-700 flex p-2 flex-row justify-between items-center w-screen border-gray-700 rounded-t-lg;   
+    @apply container flex p-2 flex-row justify-between items-center rounded-t-lg;   
 }
 
 .coverImage{
