--- a/Client/src/styles/global.css
+++ b/Client/src/styles/global.css
@@ -42,3 +42,7 @@ body {
 .episodeButtonsZ{
   @apply flex flex-wrap my-5 justify-center items-center;
 }
+
+.secondContainer{
+  @apply text-3xl md:text-5xl font-bold text-center my-10;
+}
