--- a/Client/src/styles/global.css
+++ b/Client/src/styles/global.css
@@ -46,3 +46,11 @@ body {
 .secondContainer{
   @apply text-3xl md:text-5xl font-bold text-center my-10;
 }
+
+.conteinerZmovies{
+  @apply container flex p-2 flex-row justify-between items-center rounded-t-lg;   
+}
+
+.carouselTittle{
+  @apply text-2xl text-white md:text-4xl ml-4;
+}
