--- a/Client/src/components/Header/styles.css
+++ b/Client/src/components/Header/styles.css
@@ -27,5 +27,5 @@
 }
 
 .navLink{
-    @apply text-white hover:text-gray-500 transition-colors;
+    @apply text-white hover:text-gray-500 text-xl transition-colors;
 }
