git commit -m ":sparkles: feat: Removing Sidebar"

--- a/Client/src/components/Home/styles.css
+++ b/Client/src/components/Home/styles.css
@@ -13,7 +13,8 @@
 }
 
 @media screen and (min-width: 1756px){
+    /*SideBar*/
     .homeContent{
-        width: 90%;
+        width: 100%;
     }
 }
