:lipstick: feat: DBZ e DB Kai screen update

--- a/Client/src/screens/DBHScreen/styles.css
+++ b/Client/src/screens/DBHScreen/styles.css
@@ -1,5 +1,5 @@
-.classicScreenBoxKai{
-    background-image: url("../../images/capaKai.jpeg") !important;
+.classicScreenBoxH{
+    background-image: url("../../images/capaDBH.jpg") !important;
     background-attachment: fixed;
     background-size: cover;
 }
