:sparkles: feat: Carrousel and eps update

--- a/Client/src/components/DragonBallZ/MovieContentZ/styles.css
+++ b/Client/src/components/DragonBallZ/MovieContentZ/styles.css
@@ -11,15 +11,10 @@
 }
 
 .coverImage:hover{
-    transform: scale(0.9);
-    -webkit-transform: scale(0.9);
-    -moz-transform: scale(0.9);
-    -ms-transform: scale(0.9);
-    -o-transform: scale(0.9);
-    transition: 0.5s ease;
-    -webkit-transition: 0.5s ease;
-    -moz-transition: 0.5s ease;
-    -ms-transition: 0.5s ease;
-    -o-transition: 0.5s ease;
-    @apply rounded-3xl;
+    transition: 1s;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -ms-transition: 1s;
+    -o-transition: 1s;
+    @apply blur-sm;
 }
