--- a/Client/src/components/SectionLinks/styles.css
+++ b/Client/src/components/SectionLinks/styles.css
@@ -1,17 +1,16 @@
-.linkToEpisode{
-    @apply rounded text-center bg-orange-400 text-white font-bold p-5 text-xl;
-    @apply flex flex-col m-2;
-    @apply hover:bg-orange-600;
+.linkToEpisode {
+  @apply rounded text-center text-white font-bold p-5 text-xl;
+  @apply flex flex-col m-2;
 }
 
-.episodeButtons{
-    @apply flex flex-row my-1;
+.episodeButtons {
+  @apply flex flex-row my-1;
 }
 
 /*1150*/
 
-@media screen and (max-width: 1150px){
-    .episodeButtons{
-        @apply flex flex-col my-5;
-    }
+@media screen and (max-width: 1150px) {
+  .episodeButtons {
+    @apply flex flex-col my-5;
+  }
 }
